--- a/package.json
+++ b/package.json
@@ -12,8 +12,12 @@
     "react-bootstrap": "^1.3.0",
     "react-dom": "^16.13.1",
     "react-moment": "^0.9.7",
+    "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.1"
+    "react-scripts": "3.4.1",
+    "react-spinners": "^0.9.0",
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0"
   },
   "scripts": {
     "dev": "json-server --watch db.json -p 3001 && start react-scripts start",
